--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,22 +11,27 @@
   "id": "/",
   "icons": [
     {
-      "src": "pwa-64x64.png",
+      "src": "favicon.ico?v=2",
+      "sizes": "16x16 32x32 48x48 64x64",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "pwa-64x64.png?v=2",
       "sizes": "64x64",
       "type": "image/png"
     },
     {
-      "src": "pwa-192x192.png",
+      "src": "pwa-192x192.png?v=2",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "pwa-512x512.png",
+      "src": "pwa-512x512.png?v=2",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "maskable-icon-512x512.png",
+      "src": "maskable-icon-512x512.png?v=2",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
